add change pass

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -49,7 +49,7 @@
     <section id ="top" class="py-5 text-center container">
         <div class="row py-lg-5">
           <div class="col-lg-6 col-md-8 mx-auto">
-            <h1 class="fw-light">Welcome, Pruthvi!</h1>
+            <h1 class="fw-light">Welcome, <%= MyName %></h1>
             <p class="lead text-muted">Some description of what we do and what we have to offer.</p>
           </div>
         </div>
