add pass change and refactor

--- a/public/css/styles2.css
+++ b/public/css/styles2.css
@@ -4,6 +4,10 @@
   color: white;
 }
 
+.venues {
+  text-align: center;
+}
+
 .navigation {
   padding-top: 0px;
   background-color: black !important;
