--- a/views/home.ejs
+++ b/views/home.ejs
@@ -55,11 +55,39 @@
         </div>
       </section>
 
+
+
   <div class="album py-5 bg-light">
     <div class="container">
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
 
-      <form class="" action="/result" method="post">
+
+
+        <%  newListItems.forEach(function(item){ %>
+          <form class="" action="/result" method="post">
+              <div class="col">
+                <div class="card shadow-sm">
+                    <img src="<%=item.Image%>" alt="" height="225px" width="100%">
+                  <div class="card-body">
+
+                    <input id="cityInput" readonly type="text" name="City" value="<%=item.Name%>">
+                    <p class="card-text"><%=item.Description%></p>
+                    <div class="d-flex justify-content-between align-items-center">
+                      <div class="btn-group">
+                        <button class="btn btn-sm btn-outline-secondary" type="submit">View</button>
+                      </div>
+
+                      <small class="text-muted venues"><%=item.Venue%></small>
+                      <small class"text-muted"><%=item.Rating%></small>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </form>
+            <%  }) %>
+
+
+    <!--   <form class="" action="/result" method="post">
         <div class="col">
           <div class="card shadow-sm">
               <img src="assests/images/camping.jpg" alt="" height="225px" width="100%">
@@ -252,7 +280,7 @@
               </div>
             </div>
           </div>
-        </form>
+        </form> -->
 
 
       </div>
