--- a/views/home.ejs
+++ b/views/home.ejs
@@ -90,7 +90,7 @@
     <!--   <form class="" action="/result" method="post">
         <div class="col">
           <div class="card shadow-sm">
-              <img src="assests/images/camping.jpg" alt="" height="225px" width="100%">
+              <img src="assets/images/camping.jpg" alt="" height="225px" width="100%">
             <div class="card-body">
 
               <input id="cityInput" readonly type="text" name="City" value="Camping">
@@ -112,7 +112,7 @@
       <form class="" action="/result" method="post">
         <div class="col">
           <div class="card shadow-sm">
-              <img src="assests/images/soccer.jpg" alt="" height="225px" width="100%">
+              <img src="assets/images/soccer.jpg" alt="" height="225px" width="100%">
             <div class="card-body">
 
               <input id="cityInput" readonly type="text" name="City" value="Soccer">
@@ -133,7 +133,7 @@
       <form class="" action="/result" method="post">
         <div class="col">
           <div class="card shadow-sm">
-              <img src="assests/images/hiking.jpg" alt="" height="225px" width="100%">
+              <img src="assets/images/hiking.jpg" alt="" height="225px" width="100%">
             <div class="card-body">
 
               <input id="cityInput" readonly type="text" name="City" value="Hiking">
@@ -155,7 +155,7 @@
         <form class="" action="/result" method="post">
           <div class="col">
             <div class="card shadow-sm">
-                <img src="assests/images/yoga.jpg" alt="" height="225px" width="100%">
+                <img src="assets/images/yoga.jpg" alt="" height="225px" width="100%">
               <div class="card-body">
 
                 <input id="cityInput" readonly type="text" name="City" value="Yoga">
@@ -177,7 +177,7 @@
         <form class="" action="/result" method="post">
           <div class="col">
             <div class="card shadow-sm">
-                <img src="assests/images/gaming.jpg" alt="" height="225px" width="100%">
+                <img src="assets/images/gaming.jpg" alt="" height="225px" width="100%">
               <div class="card-body">
 
                 <input id="cityInput" readonly type="text" name="City" value="Gaming">
@@ -199,7 +199,7 @@
         <form class="" action="/result" method="post">
           <div class="col">
             <div class="card shadow-sm">
-                <img src="assests/images/swim.jpg" alt="" height="225px" width="100%">
+                <img src="assets/images/swim.jpg" alt="" height="225px" width="100%">
               <div class="card-body">
 
                 <input id="cityInput" readonly type="text" name="City" value="Swimming">
@@ -220,7 +220,7 @@
         <form class="" action="/result" method="post">
           <div class="col">
             <div class="card shadow-sm">
-                <img src="assests/images/foosball.webp" alt="" height="225px" width="100%">
+                <img src="assets/images/foosball.webp" alt="" height="225px" width="100%">
               <div class="card-body">
 
                 <input id="cityInput" readonly type="text" name="City" value="Foosball">
@@ -242,7 +242,7 @@
         <form class="" action="/result" method="post">
           <div class="col">
             <div class="card shadow-sm">
-                <img src="assests/images/para.png" alt="" height="225px" width="100%">
+                <img src="assets/images/para.png" alt="" height="225px" width="100%">
               <div class="card-body">
 
                 <input id="cityInput" readonly type="text" name="City" value="Paragliding">
@@ -264,7 +264,7 @@
         <form class="" action="/result" method="post">
           <div class="col">
             <div class="card shadow-sm">
-                <img src="assests/images/beach.jpeg" alt="" height="225px" width="100%">
+                <img src="assets/images/beach.jpeg" alt="" height="225px" width="100%">
               <div class="card-body">
 
                 <input id="cityInput" readonly type="text" name="City" value="Beach">
