--- a/views/activities.ejs
+++ b/views/activities.ejs
@@ -1,16 +1,57 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>My Google Map</title>
+  <style>
+    #map{
+      height:400px;
+      width:100%;
+    }
+  </style>
   </head>
   <body>
 
   <form class="" action="/addActivity" method="post">
   <input id="cityInput" readonly type="text" name="ActivityToAdd" value="<%= name %>">
-  <p><%= des %></p>
+  <img src="<%= image %>">
+  <p>Location: <%= venue %></p>
+  <p>About: <%= des %></p>
+  <p>Rating: <%= rating %></p>
+  <p>Start Date: <%= startDate %></p>
+  <p>End Date: <%= endDate %></p>
+  
   <button class="btn" type="submit">Submit</button>
     </form>
+
+  <h1>My Google Map</h1>
+  <div id="map"></div>
+  <script>
+    function initMap(){
+      // Map options
+      var options = {
+        zoom:14,
+        center:{lat:<%= latitude %>,lng:<%= longitude %>}
+      }
+
+      // New map
+      var map = new google.maps.Map(document.getElementById('map'), options);
+
+
+      // add marker
+      var marker = new google.maps.Marker({
+        position:{lat:<%= latitude %>, lng:<%= longitude %>},
+        map:map,
+        icon:'https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png'
+      });
+      
+    }
+  </script>
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2lr6IIYd9TNWufUK84Exn0hr_TqlWwLQ&callback=initMap">
+    </script>
 
   </body>
 </html>
