add checkout and previous activities

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,16 +21,16 @@
           <a class="navcolor1" href="#top">Home</a>
         </li>
         <li class="nav-item">
-          <a class="navcolor1" href="nextstep.html">Profile</a>
+          <a class="navcolor1" href="nextstep.html">Checkout</a>
         </li>
         <li class="nav-item">
-          <a class="navcolor1" href="#">Activities</a>
+          <a class="navcolor1" href="previousActivities">PastActivities</a>
         </li>
         <li class="nav-item">
-          <a class="navcolor1" href="#">Wallet</a>
+          <a class="navcolor1" href="Wallet.html">Wallet</a>
         </li>
         <li class="nav-item">
-          <a class="navcolor1" href="#footer">AboutUs</a>
+          <a class="navcolor1" href="checkout.html">Profile</a>
         </li>
         <li class="nav-item">
           <a class="navcolor1" href="index.html">Logout</a>
