--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,9 @@
     <link rel="stylesheet" href="css/styles2.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <title>Home</title>
+    
   </script>
+  <script src="https://kit.fontawesome.com/3ac2a27d06.js" crossorigin="anonymous"></script>
 
   </head>
   <body>
@@ -21,16 +23,16 @@
           <a class="navcolor1" href="#top">Home</a>
         </li>
         <li class="nav-item">
-          <a class="navcolor1" href="nextstep.html">Checkout</a>
+          <a class="navcolor1" href="nextstep.html">Profile</a>
         </li>
         <li class="nav-item">
-          <a class="navcolor1" href="previousActivities">PastActivities</a>
+          <a class="navcolor1" href="#">PastActivities</a>
         </li>
         <li class="nav-item">
-          <a class="navcolor1" href="Wallet.html">Wallet</a>
+          <a class="navcolor1" href="#">Wallet</a>
         </li>
         <li class="nav-item">
-          <a class="navcolor1" href="checkout.html">Profile</a>
+          <a class="navcolor1" href="#footer">AboutUs</a>
         </li>
         <li class="nav-item">
           <a class="navcolor1" href="index.html">Logout</a>
@@ -51,10 +53,14 @@
           <div class="col-lg-6 col-md-8 mx-auto">
             <h1 class="fw-light">Welcome, <%= MyName %></h1>
             <p class="lead text-muted">Some description of what we do and what we have to offer.</p>
+            <div class="form-control col-lg-8">
+              <input type="text" class="form-control col-lg-1" placeholder="Search"><button type="button" class="btn btn-primary btn-lg"><i class="fa fa-search" aria-hidden="true"></i> Search</button>
+          </div>
           </div>
         </div>
       </section>
 
+      
 
 
   <div class="album py-5 bg-light">
