--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/styles2.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <title>Home</title>
-    
+
   </script>
   <script src="https://kit.fontawesome.com/3ac2a27d06.js" crossorigin="anonymous"></script>
 
@@ -54,15 +54,13 @@
             <h1 class="fw-light">Welcome, <%= MyName %></h1>
             <p class="lead text-muted">Some description of what we do and what we have to offer.</p>
             <div class="form-control col-lg-8">
-              <input type="text" class="form-control col-lg-1" placeholder="Search"><button type="button" class="btn btn-primary btn-lg"><i class="fa fa-search" aria-hidden="true"></i> Search</button>
+              <input type="text" class="form-control col-lg-1" placeholder="Search">
+              <button type="button" class="btn btn-primary btn-lg">
+              <i class="fa fa-search" aria-hidden="true"></i> Search</button>
           </div>
           </div>
         </div>
-      </section>
-
-      
-
-
+    </section>
   <div class="album py-5 bg-light">
     <div class="container">
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
