--- a/views/adminview.ejs
+++ b/views/adminview.ejs
@@ -25,7 +25,7 @@
   <i class="fa fa-search" aria-hidden="true"></i> Search User</button></i>
 
 </div>
-<%  newListItems.forEach(function(item){ %>
+
 <table class="user-list">
   <thead>
     <tr>
@@ -37,15 +37,13 @@
   </thead>
   <tbody>
     <tr>
-      <td><%=item.FirstName%> <%=item.LastName%></td>
-      <td><%=item.EmailID%></td>
-      <td></i><a type="button" class="btn btn-dark" href="#"> <i class="fas fa-pencil-alt"></i> Edit </a></td>
-      <td></i><a type="button" class="btn btn-dark" id="red" href="#"> <i class="fas fa-trash"></i> Delete </a></td>
+      <td>Ian</td>
+      <td>ian@iansoohoo.me</td>
+      <td></i><a type="button" class="btn btn-dark" id="settings-button" href="edit.html"> <i class="fas fa-pencil-alt"></i> Edit </a></td>
+      <td></i><a type="button" class="btn btn-dark" id="settings-button-red" href="#"> <i class="fas fa-trash"></i> Delete </a></td>
     </tr>
   </tbody>
 </table>
-
-<%  }) %>
     </body>
 
     </html>
