--- a/views/adminview.ejs
+++ b/views/adminview.ejs
@@ -37,15 +37,23 @@
   </thead>
   <tbody>
     <tr>
+      <form class="" action="/editUser" method="post">
       <td><%=item.FirstName%> <%=item.LastName%></td>
-      <td><%=item.EmailID%></td>
-      <td></i><a type="button" class="btn btn-dark" href="#"> <i class="fas fa-pencil-alt"></i> Edit </a></td>
-      <td></i><a type="button" class="btn btn-dark" id="red" href="#"> <i class="fas fa-trash"></i> Delete </a></td>
+      <input id="userEmail" readonly type="text" name="userEditEmail" value="<%=item.EmailID%>">
+      <input class="btn btn-sm btn-outline-secondary" type="submit" name="vote" value="Edit">
+      <input class="btn btn-sm btn-outline-secondary" type="submit" name="vote" value="Delete">
+      <!-- <td></i><a type="button" class="btn btn-dark" href="#"> <i class="fas fa-pencil-alt"></i> Edit </a></td>
+      <td></i><a type="button" class="btn btn-dark" id="red" href="#"> <i class="fas fa-trash"></i> Delete </a></td> -->
+    </form>
     </tr>
   </tbody>
 </table>
 
 <%  }) %>
+
+<script>
+
+</script>
     </body>
 
     </html>
