--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,13 +23,13 @@
           <a class="navcolor1" href="#top">Home</a>
         </li>
         <li class="nav-item">
-          <a class="navcolor1" href="nextstep.html">Profile</a>
+          <a class="navcolor1" href="checkout.html">Profile</a>
         </li>
         <li class="nav-item">
-          <a class="navcolor1" href="#">PastActivities</a>
+          <a class="navcolor1" href="previousActivities">PastActivities</a>
         </li>
         <li class="nav-item">
-          <a class="navcolor1" href="#">Wallet</a>
+          <a class="navcolor1" href="wallet.html">Wallet</a>
         </li>
         <li class="nav-item">
           <a class="navcolor1" href="#footer">AboutUs</a>
