updated activities schema

--- a/views/activities.ejs
+++ b/views/activities.ejs
@@ -20,8 +20,11 @@
   <p>Location: <%= venue %></p>
   <p>About: <%= des %></p>
   <p>Rating: <%= rating %></p>
-  <p>Start Date: <%= startDate %></p>
-  <p>End Date: <%= endDate %></p>
+  <p>Date: <%= date %></p>
+  <p>Time: <%= time %></p>
+  <p>Price: $<%= price %></p>
+  <p>Tags: <%= tags %></p>
+
 
   <button class="btn" type="submit">Submit</button>
     </form>
