--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles2.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <title>Home</title>
 
@@ -11,52 +13,25 @@
 
   </head>
   <body>
-
-  <section id="navigation-area">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top navigation" style="color:white;">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse top-nav" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="navcolor1" href="#top">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="navcolor1" href="checkout.html">Profile</a>
-        </li>
-        <li class="nav-item">
-          <a class="navcolor1" href="previousActivities">PastActivities</a>
-        </li>
-        <li class="nav-item">
-          <a class="navcolor1" href="wallet.html">Wallet</a>
-        </li>
-        <li class="nav-item">
-          <a class="navcolor1" href="#footer">AboutUs</a>
-        </li>
-        <li class="nav-item">
-          <a class="navcolor1" href="index.html">Logout</a>
-        </li>
-        <li class="nav-item">
-          <a class="navcolor1" href="#"><i class="fas fa-search"></i></a>
-        </li>
-        <li class="nav-item">
-          <a class="navcolor1" href="#"><i class="fas fa-shopping-bag"></i></a>
-        </li>
-      </ul>
+    <div class="topnav">
+      <a class="active" href="#top">Home</a>
+      <a href="checkout.html">Profile</a>
+      <a  href="previousActivities">PastActivities</a>
+      <a href="wallet.html">Wallet</a>
+      <a style="float:right;" href="index.html">Logout</a>
     </div>
-  </nav>
-</section>
-<main>
+
+
+  <main>
     <section id ="top" class="py-5 text-center container">
         <div class="row py-lg-5">
           <div class="col-lg-6 col-md-8 mx-auto">
             <h1 class="fw-light">Welcome, <%= MyName %></h1>
             <p class="lead text-muted">Some description of what we do and what we have to offer.</p>
-            <div class="form-control col-lg-8">
+            <div id="cityInput1" class="form-control col-lg-8">
               <form class="" action="/searchActivity" method="post">
               <input type="text" name = "activityTag" class="form-control col-lg-1" placeholder="Search">
-              <button class="btn btn-primary btn-lg" type = "submit">
+              <button class=" ser btn btn-primary btn-lg" type = "submit">
               <i class="fa fa-search" aria-hidden="true" ></i> Search</button>
               </form>
           </div>
