--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,71 @@
+.dropbtn {
+  /* background-color: #4CAF50; */
+  color: black;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  /* background-color: #3e8e41; */
+}
+
+.topnav {
+  /* overflow: hidden; */
+  /* background-color: #8785a2; */
+  position:fixed;
+   top:0;
+   width:100%;
+   z-index:100;
+}
+
+.topnav a {
+  float: left;
+  /* color: #f2f2f2; */
+  text-align: center;
+  padding: 14px 14px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #222831;
+  color: white;
+}
+
 body, html {height:100%;}
 
 div.wrap {height:100%; overflow:hidden;}
@@ -5,11 +73,6 @@ div.wrap {height:100%; overflow:hidden;}
 
 body {overflow: hidden; }
 
-
-* {
-    padding: 0;
-    margin: 0;
-}
 
 
 
@@ -27,7 +90,7 @@ body {overflow: hidden; }
     border-collapse: collapse;
     border-spacing: 0;
     top: 20%;
-    
+
     height:auto;
     text-align: center;
     margin-left:10%;
@@ -44,7 +107,7 @@ body {overflow: hidden; }
     position: relative;
     left: 50%;
     transform: translateX(-50%);
-  
+
 
     border: none;
 
@@ -58,13 +121,14 @@ body {overflow: hidden; }
     margin-top: 25px;
 
 
-  
+
 }
 
 
 h1, h2, p, a {
     font-family: 'Helvetica';
     margin-bottom: 15px;
+    color: black;
 }
 
 h1 {
@@ -80,8 +144,9 @@ p {
     line-height: 30px;
 }
 
-a { 
+a {
     width: 200px;
+    color: black;
 }
 
 .cover-image {
@@ -94,6 +159,5 @@ a {
   left: 0;
 
   background-size: cover;
-    
-}
 
+}
