--- a/views/wallets.ejs
+++ b/views/wallets.ejs
@@ -62,7 +62,7 @@
    <div class="col-md-5 col-lg-4 order-md-last">
      <h4 class="d-flex justify-content-between align-items-center mb-3">
        <span class="text-primary">Your cart</span>
-       <span class="badge bg-primary rounded-pill"><%= numActivity%></span>
+       <span style="color:white;"class="badge bg-dark"><%= numActivity%> Items</span>
      </h4>
 
        <%  newListItems.forEach(function(item){ %>
@@ -76,48 +76,14 @@
         <%  }) %>
         <li class="list-group-item d-flex justify-content-between lh-sm">
         <div>
-          <h6 class="my-0">Price</h6>
+          <h6 class="my-0">Total Price</h6>
         </div>
         <span class="text-muted">$<%= TotalPrice %></span>
         </li>
-     <!-- <ul class="list-group mb-3">
-       <li class="list-group-item d-flex justify-content-between lh-sm">
-         <div>
-           <h6 class="my-0">Product name</h6>
-           <small class="text-muted">Brief description</small>
-         </div>
-         <span class="text-muted">$12</span>
-       </li>
-       <li class="list-group-item d-flex justify-content-between lh-sm">
-         <div>
-           <h6 class="my-0">Second product</h6>
-           <small class="text-muted">Brief description</small>
-         </div>
-         <span class="text-muted">$8</span>
-       </li>
-       <li class="list-group-item d-flex justify-content-between lh-sm">
-         <div>
-           <h6 class="my-0">Third item</h6>
-           <small class="text-muted">Brief description</small>
-         </div>
-         <span class="text-muted">$5</span>
-       </li>
-       <li class="list-group-item d-flex justify-content-between bg-light">
-         <div class="text-success">
-           <h6 class="my-0">Promo code</h6>
-           <small>EXAMPLECODE</small>
-         </div>
-         <span class="text-success">−$5</span>
-       </li>
-       <li class="list-group-item d-flex justify-content-between">
-         <span>Total (USD)</span>
-         <strong>$20</strong>
-       </li>
-     </ul> -->
    </div>
    <div class="col-md-7 col-lg-8">
      <h4 class="mb-3">Billing address</h4>
-     <form class="needs-validation" novalidate>
+     <form class="" action="/afterCheckOut" method="post">
        <div class="row g-3">
          <div class="col-sm-6">
            <label for="firstName" class="form-label">First name</label>
