--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,7 +28,7 @@
             <p class="lead text-muted">Some description of what we do and what we have to offer.</p>
             <div id="cityInput1" class="form-control col-lg-8">
               <form class="" action="/searchActivity" method="post">
-              <input type="text" name = "activityTag" class="form-control col-lg-1" placeholder="Search">
+              <input type="text" name = "activityTag" class="form-control col-lg-1" placeholder="Camping, Outdoors">
               <button class=" ser btn btn-primary btn-lg" type = "submit">
               <i class="fa fa-search" aria-hidden="true" ></i> Search</button>
               </form>
@@ -65,5 +65,8 @@
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="script.js" charset="utf-8"></script>
+    <script>
+    function disableF5(e) { if ((e.which || e.keyCode) == 116) e.preventDefault(); };
+</script>
   </body>
 </html>
