--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,6 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
   </head>
   <body class="text-center">
     <main class="form-signin">
@@ -15,7 +20,7 @@
         <img class ="tent-image"src="assets/images/tent.png" alt width="90" height="72">
         <h4 class="company">PASTIME</h4>
         <h1 class="h3 mb-3 fw-normal"> Sign in</h1>
-        <h4 class="h3 fw-normal" style="color: red"> Wrong Credentials<br /> Try Again! </h4>
+        <h4 class="h3 fw-normal" style="color: <%= inputcolor %>"> <%= FirstLine %><br /> <%= SecondLine%> </h4>
         <label for="inputEmail" class="virtually-hidden"></label>
         <input id="inputEmail" name="emailID" class="form-control" placeholder="Email address" required="" autofocus="">
         <label for="inputPassword" class="visually-hidden">Password</label>
@@ -25,8 +30,8 @@
             <input type="checkbox" value="remember-me"> Remember me
           </label>
         </div>
-        <button type="submit">Submit</button>
-        <p class="mt-5 mb-3 text-muted">© 2021</p>
+        <button class="btn btn-dark" type="submit">Submit</button>
+        <p class="mt-5 mb-3 text-muted">© 2021 Pastime</p>
 
       </form>
 
