--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
   </head>
   <body class="text-center">
     <main class="form-signin">
-      <form class="" action="/" method="post">
+      <form class="" action="/home" method="post">
         <div class="">
         <img class ="tent-image"src="assets/images/tent.png" alt width="90" height="72">
         <h4 class="company">PASTIME</h4>
