--- a/public/css/styles2.css
+++ b/public/css/styles2.css
@@ -7,6 +7,38 @@
    z-index:100;
 }
 
+.link:hover{
+  text-decoration: none;
+  color: black;
+  font-size: large;
+}
+
+
+.overlay {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0,0,0,0.5);
+	transition: opacity 200ms;
+  visibility: hidden;
+	opacity: 0;
+	&.light {
+    background: rgba(255,255,255,0.5);
+  }
+  .cancel {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    cursor: default;
+  }
+  &:target {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
 .topnav a {
   float: left;
   color: #f2f2f2;
