--- a/views/activities.ejs
+++ b/views/activities.ejs
@@ -26,7 +26,7 @@
   <p>Tags: <%= tags %></p>
 
 
-  <button class="btn" type="submit">Submit</button>
+  <button class="btn" type="submit">Add to cart</button>
     </form>
 
   <h1>My Google Map</h1>
