--- a/views/home.ejs
+++ b/views/home.ejs
@@ -39,22 +39,26 @@
       <div class="album py-5 bg-light">
         <div class="container">
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            <%  newListItems.forEach(function(item){ %>
-              <div class="col">
-                <div class="card shadow-sm">
-                    <img src="<%=item.Image%>" alt="" height="225px" width="100%">
-                      <div class="card-body">
-                        <a class="link"href="activities/<%=item.Name%>"><b><%=item.Name%> </b></a>
-                        <!-- <input id="cityInput" readonly type="text" name="City" value="<%=item.Name%>"> -->
-                        <p class="card-text"><%=item.Description%></p>
-                        <div class="d-flex justify-content-between align-items-center">
-                          <small class="text-muted venues"><%=item.Venue%></small>
-                          <small class="text-muted">$<%=item.Price%></small>
+            <% if (newListItems.length == 0){ %>
+              <h3>No activities are found. Try another keyword or back to the homepage to see all activities.</h3>
+            <% } else{ %>
+              <%  newListItems.forEach(function(item){ %>
+                <div class="col">
+                  <div class="card shadow-sm">
+                      <img src="<%=item.Image%>" alt="" height="225px" width="100%">
+                        <div class="card-body">
+                          <a class="link"href="activities/<%=item.Name%>"><b><%=item.Name%> </b></a>
+                          <!-- <input id="cityInput" readonly type="text" name="City" value="<%=item.Name%>"> -->
+                          <p class="card-text"><%=item.Description%></p>
+                          <div class="d-flex justify-content-between align-items-center">
+                            <small class="text-muted venues"><%=item.Venue%></small>
+                            <small class="text-muted">$<%=item.Price%></small>
+                          </div>
                         </div>
                       </div>
                     </div>
-                  </div>
-            <%  }) %>
+              <%  }) %>
+            <% } %>
           </div>
         </div>
       </div>
