--- a/views/servicehome.ejs
+++ b/views/servicehome.ejs
@@ -25,7 +25,7 @@
         <div class="row py-lg-5">
           <div class="col-lg-6 col-md-8 mx-auto">
             <h1 class="fw-light">Welcome, <%= MyName %></h1>
-            <p class="lead text-muted">Some description of what we do and what we have to offer.</p>
+            <p class="lead text-muted"><%= alert %></p>
             <div id="cityInput1" class="form-control col-lg-8">
               <form class="" action="/searchActivity" method="GET">
               <input type="text" name = "activityTag" class="form-control col-lg-1" placeholder="Camping, Outdoors">
