add search functionalities for admin

--- a/views/adminview.ejs
+++ b/views/adminview.ejs
@@ -13,9 +13,12 @@
       <div id="button-container">
       </div>
       <div id="button-container">
-         <input type="text" class="form-control col-lg-1" placeholder="Search">
-         <button type="button" class="btn btn-primary btn-lg">
-         <i class="fa fa-search" aria-hidden="true"></i> Search User</button></i>
+        <form class="" action="/searchUser" method="GET">
+         <input name = "sUser" ype="text" class="form-control col-lg-1" placeholder="example@gmail.com">
+         <button class=" ser btn btn-primary btn-lg" type = "submit">
+         <i class="fa fa-search" aria-hidden="true" ></i> Search</button>
+         <!-- <button class="fa fa-search" aria-hidden="true"></i> Search User</button></i> -->
+         </form>
          <br/>
          <br />
       </div>
