--- a/views/userEditTemplate.ejs
+++ b/views/userEditTemplate.ejs
@@ -57,8 +57,8 @@
             </div>
 
             <div class="col-6">
-              <label>Password</label>
-            <input required="required" name="EditedPass" class="form-control" id="inputPassword4" value="<%=item.Password%>">
+              <label>Password (Hashed)</label>
+            <input required="required" name="EditedPass" type="password" class="form-control" id="inputPassword4" value="<%=item.Password%>">
             </div>
             <div class="btn1 col-6">
              <button type="submit" class="btn btn-primary">Done</button>
