--- a/views/userEditTemplate.ejs
+++ b/views/userEditTemplate.ejs
@@ -50,7 +50,7 @@
             </div>
             <div class="col-6">
               <label for="inputEmail4">Email</label>
-           <input required="required" type="email" name="EditedEmail" class="form-control" id="inputEmail4" value="<%=item.EmailID%>">
+           <input required="required" type="email" name="EditedEmail" readonly class="form-control" id="inputEmail4" value="<%=item.EmailID%>">
               <div class="invalid-feedback">
                 Please enter a valid email address for shipping updates.
               </div>
