--- a/views/servicehome.ejs
+++ b/views/servicehome.ejs
@@ -12,10 +12,10 @@
 
   <body>
     <div class="topnav">
-      <a class="active" href="#top">Home</a>
+      <!-- <a class="active" href="#top">Home</a>
       <a href="checkout.html">Profile</a>
       <a href="previousActivities">PastActivities</a>
-      <a href="wallet.html">Wallet</a>
+      <a href="wallet.html">Wallet</a> -->
       <a style="float:right;" href="index.html">Logout</a>
     </div>
 
@@ -25,7 +25,7 @@
         <div class="row py-lg-5">
           <div class="col-lg-6 col-md-8 mx-auto">
             <h1 class="fw-light">Welcome, <%= MyName %></h1>
-            <p class="lead text-muted"><%= alert %></p>
+            <p style="color: <%= color1 %>;"class="lead text-muted"><%= alert %></p>
             <div id="cityInput1" class="form-control col-lg-8">
               <form class="" action="/searchActivity" method="GET">
               <input type="text" name = "activityTag" class="form-control col-lg-1" placeholder="Camping, Outdoors">
