--- a/views/activities.ejs
+++ b/views/activities.ejs
@@ -1,60 +1,104 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="UTF-8">
+
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="/css/styles2.css">
+  <link rel="stylesheet" href="/css/style4.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>My Google Map</title>
-  <style>
-    #map{
-      height:400px;
-      width:100%;
-    }
-  </style>
-  </head>
-  <body>
+  <title>Pastime - <%= name %>
+  </title>
 
-  <form class="" action="/addActivity" method="post">
-  <input style="background: transparent; border: none;"id="cityInput" readonly type="text" name="ActivityToAdd" value="<%= name %>">
-  <img src="<%= image %>">
-  <p>Location: <%= venue %></p>
-  <p>About: <%= des %></p>
-  <p>Rating: <%= rating %></p>
-  <p>Date: <%= date %></p>
-  <p>Time: <%= time %></p>
-  <p>Price: $<%= price %></p>
-  <p>Tags: <%= tags %></p>
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/favicon/site.webmanifest">
+
+</head>
+
+<body>
+
+  <div class="topnav">
+    <a href="../serviceHome">Home</a>
+    <a href="../checkout.html">Profile</a>
+    <a href="../previousActivities">PastActivities</a>
+    <a href="../wallet.html">Wallet</a>
+    <a style="float:right;" href="../index.html">Logout</a>
+  </div>
 
 
-  <button class="btn" type="submit">Add to cart</button>
-    </form>
 
-  <h1>My Google Map</h1>
-  <div id="map"></div>
+  
+  
+
+
+
+  <div class="grid-container">
+    <div class="content1">
+      <%= name %>
+    </div>
+    <div class="content2"><img src="<%= image %>"></div>
+    <div class="content3">
+      <form class="" action="/addActivity" method="post">
+        <input style="background: transparent; border: none;" id="cityInput" readonly type="text" name="ActivityToAdd"
+          value="<%= name %>">
+        
+        <p>Location: <%= venue %>
+        </p>
+        <p>About: <%= des %>
+        </p>
+        <p>Rating: <%= rating %>
+        </p>
+        <p>Date: <%= date %>
+        </p>
+        <p>Time: <%= time %>
+        </p>
+        <p>Price: $<%= price %>
+        </p>
+        <p>Tags: <%= tags %>
+        </p>
+
+
+        <button class="btn" type="submit">Add to cart</button>
+      </form>
+    </div>
+    <div class="content4">
+      <h1>Location Map</h1>
+      <div id="map"></div>
+    </div>
+    <!-- <div class="content5">Content5</div> -->
+  </div>
+
+
+
   <script>
-    function initMap(){
+    function initMap() {
       // Map options
       var options = {
-        zoom:14,
-        center:{lat:<%= latitude %>,lng:<%= longitude %>}
+        zoom: 14,
+        center: { lat:<%= latitude %>, lng:<%= longitude %>}
       }
+    
 
-      // New map
-      var map = new google.maps.Map(document.getElementById('map'), options);
+    // New map
+    var map = new google.maps.Map(document.getElementById('map'), options);
 
 
-      // add marker
-      var marker = new google.maps.Marker({
-        position:{lat:<%= latitude %>, lng:<%= longitude %>},
-        map:map,
-        icon:'https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png'
+    // add marker
+    var marker = new google.maps.Marker({
+      position: { lat:<%= latitude %>, lng:<%= longitude %>},
+    map: map,
+      icon: 'https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png'
       });
 
     }
   </script>
-  <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD022pcfdDS3dAhl-GNkM_BD7GZKUZ8NpM&callback=initMap">
-    </script>
 
-  </body>
+<script async defer
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD022pcfdDS3dAhl-GNkM_BD7GZKUZ8NpM&callback=initMap">
+</script>
+
+</body>
+
 </html>
