--- a/public/css/style4.css
+++ b/public/css/style4.css
@@ -13,7 +13,23 @@
   html, body {
     background-color: white;
     height: 100%;
+    padding-top: 25px; 
     margin: 0;
+  }
+
+  h1{
+    color: #ECEFF4;
+  }
+
+  h2{
+    color: #ECEFF4;
+  }
+
+  
+
+  
+  p{
+    color: #ECEFF4;
   }
   
   
@@ -66,6 +82,8 @@
 
   .grid-container {
     width: 100%;
+    /* border-bottom: 1000000px;
+    border-color: white; */
     display: grid;
     height: 100vh;
     grid-template-columns: 1fr 1fr;
@@ -78,7 +96,7 @@
 
   .content1 {
     grid-area: name;
-   background-color: #18ffff;
+   background-color: #88C0D0;
    padding: 2em;
    
   }
@@ -89,25 +107,38 @@
   }
 
   .content2 img {
-    width: 100%;
-    height: auto;
+    max-width: 100%;
+    min-height: 100%;
+    /* height: auto; */
+    
+    /* min-height: 100%; */
+    /* width: 25em;  */
+    vertical-align: middle;
+    text-align: center;
+
     }
 
 
   .content3 {
-  background-color: #17adad;
+  background-color: #434C5E;
   grid-area: details;
+  padding: 3em;
   }
   .content4 {
-  background-color: #0e6969;
+  background-color: #2E3440;
+  padding: 2em;
   grid-area: map;
+  
   }
+
+
   .content5 {
-  background-color: #0b4646;
+  background-color: #2E3440;
+
   }
   
 
-  @media only screen and (max-width: 550px){
+  @media only screen and (max-width: 800px){
     .grid-container {
       width: 100%;
       display: grid;
