--- a/views/activities.ejs
+++ b/views/activities.ejs
@@ -15,6 +15,11 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
   <link rel="manifest" href="/favicon/site.webmanifest">
 
+  <script src="https://kit.fontawesome.com/3ac2a27d06.js" crossorigin="anonymous"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -36,14 +41,19 @@
 
   <div class="grid-container">
     <div class="content1">
-      <%= name %>
+     <h1> <%= name %> </h1>   
+
     </div>
+
+
+
+    
     <div class="content2"><img src="<%= image %>"></div>
     <div class="content3">
       <form class="" action="/addActivity" method="post">
-        <input style="background: transparent; border: none;" id="cityInput" readonly type="text" name="ActivityToAdd"
-          value="<%= name %>">
-        
+        <!-- <input style="background: transparent; border: none;" id="cityInput" readonly type="text" name="ActivityToAdd"
+          value="<%= name %>"> -->
+          <h2>Details</h2>
         <p>Location: <%= venue %>
         </p>
         <p>About: <%= des %>
@@ -59,12 +69,12 @@
         <p>Tags: <%= tags %>
         </p>
 
-
-        <button class="btn" type="submit">Add to cart</button>
+       
+        <button  class="btn btn-dark" type="submit"><i class="fa fa-shopping-cart"></i> Add to cart</button>
       </form>
     </div>
     <div class="content4">
-      <h1>Location Map</h1>
+      <h2>Location Map</h2>
       <div id="map"></div>
     </div>
     <!-- <div class="content5">Content5</div> -->
