--- a/views/servicehome.ejs
+++ b/views/servicehome.ejs
@@ -25,7 +25,7 @@
         <div class="row py-lg-5">
           <div class="col-lg-6 col-md-8 mx-auto">
             <h1 class="fw-light">Welcome, <%= MyName %></h1>
-            <p style="color: <%= color1 %>;"class="lead text-muted"><%= alert %></p>
+            <h4 class="h3 fw-normal" style="color: <%= color1 %>"><%= alert %></h4>
             <div id="cityInput1" class="form-control col-lg-8">
               <form class="" action="/searchActivity" method="GET">
               <input type="text" name = "activityTag" class="form-control col-lg-1" placeholder="Camping, Outdoors">
@@ -73,7 +73,7 @@
               <%  }) %>
               <div class="col">
                 <div class="card shadow-sm">
-                    <img src="" alt="Image Preview" height="225px" width="100%">
+                    <img src="https://www.publicdomainpictures.net/pictures/30000/velka/plain-white-background.jpg" alt="Image Preview" height="225px" width="100%">
                       <div class="card-body">
                         <p>Activity Name</p>
                         <p class="card-text">Activity Description</p>
