--- a/views/adminview.ejs
+++ b/views/adminview.ejs
@@ -9,10 +9,13 @@
       <script src="https://kit.fontawesome.com/3ac2a27d06.js" crossorigin="anonymous"></script>
    </head>
    <body>
-      User List
-      <div id="button-container">
-      </div>
-      <div id="button-container">
+     <div style="padding-left: 3rem;"class="topnav">
+       <a style="float:right;" href="index.html">Logout</a>
+         <a class="btn btn-dark" href="AllUsers">All Users</a>
+     </div>
+
+
+      <div style="padding-top: 5rem; "id="button-container top-search">
         <form class="" action="/searchUser" method="GET">
          <input name = "sUser" ype="text" class="form-control col-lg-1" placeholder="example@gmail.com">
          <button class=" ser btn btn-primary btn-lg" type = "submit">
@@ -38,7 +41,7 @@
                <td><%=item.FirstName%> <%=item.LastName%></td>
 
                <form class="" action="/editUser" method="post">
-                  <td><input id="userEmail" readonly type="text" name="userEditEmail" value="<%=item.EmailID%>"></td>
+                  <td><input id="userEmail" style="border: none;"readonly type="text" name="userEditEmail" value="<%=item.EmailID%>"></td>
                   <td><button class="btn btn-dark" onsubmit="return false" type="submit" name="vote" value="Edit"> <i class="fas fa-pencil-alt"></i> Edit</button></td>
 
                <td><button class="btn btn-dark" type="submit" name="vote" value="Lock"> <i class="fas fa-lock"></i> Lock</button></td>
