fixing about scrolling

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,7 +71,11 @@ body, html {height:100%;}
 div.wrap {height:100%; overflow:hidden;}
 
 
-body {overflow: hidden; }
+/* body { } */
+
+.overflow-hidden{
+  overflow: hidden;
+}
 
 
 
