--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,85 +1,89 @@
 .dropbtn {
-  /* background-color: #4CAF50; */
-  color: black;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
+    /* background-color: #4CAF50; */
+    color: black;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
 }
 
 .dropdown {
-  position: relative;
-  display: inline-block;
+    position: relative;
+    display: inline-block;
 }
 
 .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
 }
 
 .dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
 }
 
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content a:hover {
+    background-color: #f1f1f1
+}
 
 .dropdown:hover .dropdown-content {
-  display: block;
+    display: block;
 }
 
 .dropdown:hover .dropbtn {
-  /* background-color: #3e8e41; */
+    /* background-color: #3e8e41; */
 }
 
 .topnav {
-  /* overflow: hidden; */
-  /* background-color: #8785a2; */
-  position:fixed;
-   top:0;
-   width:100%;
-   z-index:100;
+    /* overflow: hidden; */
+    /* background-color: #8785a2; */
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 100;
 }
 
 .topnav a {
-  float: left;
-  /* color: #f2f2f2; */
-  text-align: center;
-  padding: 14px 14px;
-  text-decoration: none;
-  font-size: 17px;
+    float: left;
+    /* color: #f2f2f2; */
+    text-align: center;
+    padding: 14px 14px;
+    text-decoration: none;
+    font-size: 17px;
 }
 
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+    background-color: #ddd;
+    color: black;
 }
 
 .topnav a.active {
-  background-color: #222831;
-  color: white;
+    background-color: #222831;
+    color: white;
 }
 
-body, html {height:100%;}
+body,
+html {
+    height: 100%;
+}
 
-div.wrap {height:100%; overflow:hidden;}
+div.wrap {
+    height: 100%;
+    overflow: hidden;
+}
 
 
 /* body { } */
 
-.overflow-hidden{
-  overflow: hidden;
+.overflow-hidden {
+    overflow: hidden;
 }
-
-
-
-
 
 .center-box {
     position: absolute;
@@ -94,27 +98,22 @@ div.wrap {height:100%; overflow:hidden;}
     border-collapse: collapse;
     border-spacing: 0;
     top: 20%;
-
-    height:auto;
+    height: auto;
     text-align: center;
-    margin-left:10%;
-    margin-right:10%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
-
 
 .center {
     position: absolute;
     text-align: center;
 }
 
-#button-container{
+#button-container {
     position: relative;
     left: 50%;
     transform: translateX(-50%);
-
-
     border: none;
-
     padding: 15px 50%;
     text-align: center;
     text-decoration: none;
@@ -123,13 +122,12 @@ div.wrap {height:100%; overflow:hidden;}
     margin: 4px 2px;
     cursor: pointer;
     margin-top: 25px;
-
-
-
 }
 
-
-h1, h2, p, a {
+h1,
+h2,
+p,
+a {
     font-family: 'Helvetica';
     margin-bottom: 15px;
     color: black;
@@ -154,14 +152,12 @@ a {
 }
 
 .cover-image {
-  min-height: 100%;
-  min-width: 100%;
-  /* max-height: 100%; */
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  background-size: cover;
-
+    min-height: 100%;
+    min-width: 100%;
+    /* max-height: 100%; */
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-size: cover;
 }
