--- a/public/css/styles1.css
+++ b/public/css/styles1.css
@@ -6,16 +6,18 @@ body {
     background-color: #f5f5f5;
 }
 
-html, body {
+html,
+body {
     height: 100%;
 }
-.tent-image{
-  padding: 10px;
+
+.tent-image {
+    padding: 10px;
 }
 
-.company{
-  font-weight: bold;
-  font-size: 40px;
+.company {
+    font-weight: bold;
+    font-size: 40px;
 }
 
 body {
