--- a/public/css/styles2.css
+++ b/public/css/styles2.css
@@ -1,113 +1,112 @@
 .topnav {
-  overflow: hidden;
-  background-color: #222831;
-  position:fixed;
-   top:0;
-   width:100%;
-   z-index:100;
+    overflow: hidden;
+    background-color: #222831;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 100;
 }
 
-.top-search{
-  padding-top: 100px;
+.top-search {
+    padding-top: 100px;
 }
 
-.link:hover{
-  text-decoration: none;
-  color: black;
-  font-size: large;
+.link:hover {
+    text-decoration: none;
+    color: black;
+    font-size: large;
 }
-
 
 .overlay {
-	position: absolute;
-	top: 0;
-	bottom: 0;
-  left: 0;
-  right: 0;
-  background: rgba(0,0,0,0.5);
-	transition: opacity 200ms;
-  visibility: hidden;
-	opacity: 0;
-	&.light {
-    background: rgba(255,255,255,0.5);
-  }
-  .cancel {
     position: absolute;
-    width: 100%;
-    height: 100%;
-    cursor: default;
-  }
-  &:target {
-    visibility: visible;
-    opacity: 1;
-  }
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.5);
+    transition: opacity 200ms;
+    visibility: hidden;
+    opacity: 0;
+    &.light {
+        background: rgba(255, 255, 255, 0.5);
+    }
+    .cancel {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        cursor: default;
+    }
+    &:target {
+        visibility: visible;
+        opacity: 1;
+    }
 }
 
 .topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
 }
 
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+    background-color: #ddd;
+    color: black;
 }
 
 .topnav a.active {
-  background-color: #222831;
-  color: white;
+    background-color: #222831;
+    color: white;
 }
+
 .venues {
-  text-align: center;
+    text-align: center;
 }
 
 .ser {
-  margin-top: 1rem;
+    margin-top: 1rem;
 }
 
 .indu {
-  padding-right: 100px;
+    padding-right: 100px;
 }
 
 #cityInput {
-  border-top-style: hidden;
- border-right-style: hidden;
- border-left-style: hidden;
- border-bottom-style: hidden;
- font-weight: bold;
- font-size: 20px;
+    border-top-style: hidden;
+    border-right-style: hidden;
+    border-left-style: hidden;
+    border-bottom-style: hidden;
+    font-weight: bold;
+    font-size: 20px;
 }
 
 #cityInput1 {
-  border-top-style: hidden;
- border-right-style: hidden;
- border-left-style: hidden;
- border-bottom-style: hidden;
- font-weight: bold;
- font-size: 20px;
+    border-top-style: hidden;
+    border-right-style: hidden;
+    border-left-style: hidden;
+    border-bottom-style: hidden;
+    font-weight: bold;
+    font-size: 20px;
 }
 
-.navcolor1{
-  color: white;
-  padding-left: 1rem;
-  padding-right: 16rem;
-  padding-top: 5rem;
-  text-decoration: none;
+.navcolor1 {
+    color: white;
+    padding-left: 1rem;
+    padding-right: 16rem;
+    padding-top: 5rem;
+    text-decoration: none;
 }
 
-.navcolor12{
-  color: white;
-  padding-left: 2rem;
-  padding-right: 10rem;
+.navcolor12 {
+    color: white;
+    padding-left: 2rem;
+    padding-right: 10rem;
 }
 
-.navcolor13{
-  color: white;
-  padding-right: 0rem;
-  padding-left: 20rem;
-
+.navcolor13 {
+    color: white;
+    padding-right: 0rem;
+    padding-left: 20rem;
 }
