--- a/views/activities.ejs
+++ b/views/activities.ejs
@@ -2,94 +2,107 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="/css/styles2.css">
-  <link rel="stylesheet" href="/css/style4.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Pastime - <%= name %>
-  </title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="/css/styles2.css">
+    <link rel="stylesheet" href="/css/style4.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Pastime -
+        <%= name %>
+    </title>
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
-  <link rel="manifest" href="/favicon/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/site.webmanifest">
 
-  <script src="https://kit.fontawesome.com/3ac2a27d06.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/3ac2a27d06.js" crossorigin="anonymous"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
 </head>
 
 <body>
 
-  <div class="grid-container">
-    <div class="content1">
-     <h1> <%= name %> </h1>
+    <div class="grid-container">
+        <div class="content1">
+            <h1>
+                <%= name %>
+            </h1>
 
+        </div>
+
+
+
+
+        <div class="content2"><img src="<%= image %>"></div>
+        <div class="content3">
+            <form class="" action="/addActivity" method="post">
+                <h2>Details</h2>
+                <input style="background: transparent; border: none;" id="cityInput" readonly type="text" name="ActivityToAdd" value="<%= name %>">
+
+                <p>Location:
+                    <%= venue %>
+                </p>
+                <p>About:
+                    <%= des %>
+                </p>
+                <p>Rating:
+                    <%= rating %>
+                </p>
+                <p>Date:
+                    <%= date %>
+                </p>
+                <p>Time:
+                    <%= time %>
+                </p>
+                <p>Price: $
+                    <%= price %>
+                </p>
+                <button class="btn btn-dark" type="submit"><i class="fa fa-shopping-cart"></i> Add to cart</button>
+            </form>
+        </div>
+        <div class="content4">
+            <h2>Location Map</h2>
+            <div id="map"></div>
+        </div>
+        <!-- <div class="content5">Content5</div> -->
     </div>
 
 
 
-
-    <div class="content2"><img src="<%= image %>"></div>
-    <div class="content3">
-      <form class="" action="/addActivity" method="post">
-        <h2>Details</h2>
-        <input style="background: transparent; border: none;" id="cityInput" readonly type="text" name="ActivityToAdd"
-          value="<%= name %>">
-
-        <p>Location: <%= venue %>
-        </p>
-        <p>About: <%= des %>
-        </p>
-        <p>Rating: <%= rating %>
-        </p>
-        <p>Date: <%= date %>
-        </p>
-        <p>Time: <%= time %>
-        </p>
-        <p>Price: $<%= price %>
-        </p>
-        <button  class="btn btn-dark" type="submit"><i class="fa fa-shopping-cart"></i> Add to cart</button>
-      </form>
-    </div>
-    <div class="content4">
-      <h2>Location Map</h2>
-      <div id="map"></div>
-    </div>
-    <!-- <div class="content5">Content5</div> -->
-  </div>
+    <script>
+        function initMap() {
+            // Map options
+            var options = {
+                zoom: 14,
+                center: {
+                    lat: <%= latitude %>,
+                    lng: <%= longitude %>
+                }
+            }
 
 
-
-  <script>
-    function initMap() {
-      // Map options
-      var options = {
-        zoom: 14,
-        center: { lat:<%= latitude %>, lng:<%= longitude %>}
-      }
+            // New map
+            var map = new google.maps.Map(document.getElementById('map'), options);
 
 
-    // New map
-    var map = new google.maps.Map(document.getElementById('map'), options);
+            // add marker
+            var marker = new google.maps.Marker({
+                position: {
+                    lat: <%= latitude %>,
+                    lng: <%= longitude %>
+                },
+                map: map,
+                icon: 'https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png'
+            });
 
+        }
+    </script>
 
-    // add marker
-    var marker = new google.maps.Marker({
-      position: { lat:<%= latitude %>, lng:<%= longitude %>},
-    map: map,
-      icon: 'https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png'
-      });
-
-    }
-  </script>
-
-<script async defer
-src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD022pcfdDS3dAhl-GNkM_BD7GZKUZ8NpM&callback=initMap">
-</script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD022pcfdDS3dAhl-GNkM_BD7GZKUZ8NpM&callback=initMap">
+    </script>
 
 </body>
 
