--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles2.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
@@ -8,64 +9,73 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <title>Home</title>
     <script src="https://kit.fontawesome.com/3ac2a27d06.js" crossorigin="anonymous"></script>
-  </head>
+</head>
 
-  <body>
+<body>
     <div class="topnav">
-      <a class="active" href="#top">Home</a>
-      <a href="checkout.html">Profile</a>
-      <a href="previousActivities">PastActivities</a>
-      <a href="wallet.html">Wallet</a>
-      <a style="float:right;" href="index.html">Logout</a>
+        <a class="active" href="#top">Home</a>
+        <a href="checkout.html">Profile</a>
+        <a href="previousActivities">PastActivities</a>
+        <a href="wallet.html">Wallet</a>
+        <a style="float:right;" href="index.html">Logout</a>
     </div>
 
 
     <main>
-      <section id ="top" class="py-5 text-center container">
-        <div class="row py-lg-5">
-          <div class="col-lg-6 col-md-8 mx-auto">
-            <h1 class="fw-light">Welcome, <%= MyName %></h1>
-            <p class="lead text-muted">Some description of what we do and what we have to offer.</p>
-            <div id="cityInput1" class="form-control col-lg-8">
-              <form class="" action="/searchActivity" method="GET">
-              <input type="text" name = "activityTag" class="form-control col-lg-1" placeholder="Camping, Outdoors">
-              <button class=" ser btn btn-primary btn-lg" type = "submit">
-              <i class="fa fa-search" aria-hidden="true" ></i> Search</button>
-              </form>
-            </div>
-          </div>
-        </div>
-      </section>
-      <div class="album py-5 bg-light">
-        <div class="container">
-          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            <% if (newListItems.length == 0){ %>
-              <h3>No activities are found. Try another keyword or back to the homepage to see all activities.</h3>
-            <% } else{ %>
-              <%  newListItems.forEach(function(item){ %>
-                <div class="col">
-                  <div class="card shadow-sm">
-                      <img src="<%=item.Image%>" alt="" height="225px" width="100%">
-                        <div class="card-body">
-                          <a class="link"href="activities/<%=item.Name%>"><b><%=item.Name%> </b></a>
-                          <!-- <input id="cityInput" readonly type="text" name="City" value="<%=item.Name%>"> -->
-                          <p class="card-text"><%=item.Description%></p>
-                          <div class="d-flex justify-content-between align-items-center">
-                            <small class="text-muted venues"><%=item.Venue%></small>
-                            <small class="text-muted">$<%=item.Price%></small>
-                          </div>
-                        </div>
-                      </div>
+        <section id="top" class="py-5 text-center container">
+            <div class="row py-lg-5">
+                <div class="col-lg-6 col-md-8 mx-auto">
+                    <h1 class="fw-light">Welcome,
+                        <%= MyName %>
+                    </h1>
+                    <p class="lead text-muted">Some description of what we do and what we have to offer.</p>
+                    <div id="cityInput1" class="form-control col-lg-8">
+                        <form class="" action="/searchActivity" method="GET">
+                            <input type="text" name="activityTag" class="form-control col-lg-1" placeholder="Camping, Outdoors">
+                            <button class=" ser btn btn-primary btn-lg" type="submit">
+                <i class="fa fa-search" aria-hidden="true"></i> Search</button>
+                        </form>
                     </div>
-              <%  }) %>
-            <% } %>
-          </div>
+                </div>
+            </div>
+        </section>
+        <div class="album py-5 bg-light">
+            <div class="container">
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                    <% if (newListItems.length==0){ %>
+                        <h3>No activities are found. Try another keyword or back to the homepage to see all activities.</h3>
+                        <% } else{ %>
+                            <% newListItems.forEach(function(item){ %>
+                                <div class="col">
+                                    <div class="card shadow-sm">
+                                        <img src="<%=item.Image%>" alt="" height="225px" width="100%">
+                                        <div class="card-body">
+                                            <a class="link" href="activities/<%=item.Name%>"><b>
+                          <%=item.Name%>
+                        </b></a>
+                                            <!-- <input id="cityInput" readonly type="text" name="City" value="<%=item.Name%>"> -->
+                                            <p class="card-text">
+                                                <%=item.Description%>
+                                            </p>
+                                            <div class="d-flex justify-content-between align-items-center">
+                                                <small class="text-muted venues">
+                          <%=item.Venue%>
+                        </small>
+                                                <small class="text-muted">$<%=item.Price%></small>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <% }) %>
+                                    <% } %>
+                </div>
+            </div>
         </div>
-      </div>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="script.js" charset="utf-8"></script>
     <script>
-</script>
-  </body>
+    </script>
+</body>
+
 </html>
