--- a/views/servicesignup.ejs
+++ b/views/servicesignup.ejs
@@ -2,81 +2,81 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8">
-  <title>Login</title>
+    <meta charset="utf-8">
+    <title>Login</title>
 
-  <!-- Bootstrap script -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <!--CSS script-->
-  <link rel="stylesheet" href="css/styles3.css">
-  <!--Font Awesome script -->
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-  <!--JS script-->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-  <link rel="manifest" href="favicon/site.webmanifest">
+    <!-- Bootstrap script -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!--CSS script-->
+    <link rel="stylesheet" href="css/styles3.css">
+    <!--Font Awesome script -->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <!--JS script-->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
 </head>
 
 <body class="bg-light">
 
-<div class="container">
-  <main>
-    <form class="" action="/serviceSignUp" method="post">
-    <div class="py-5 text-center">
-      <img class="d-block mx-auto mb-4" src="assets/images/tent.png" alt="" width="72" height="57">
-      <h4 style="text-align:center;"class="company">PASTIME</h4>
-      <h1 style="padding-left: 3rem;"class="h3 mb-3 fw-normal"> Sign up</h1>
-    </div>
-    <div class="row g-5">
-      <div class="col-md-6 col-lg-12">
-          <div class="row g-3">
-            <div class="col-sm-6">
-              <label >Provider Name</label>
-            <input  required="required" name="spName"class="form-control"  placeholder="Provider Name">
-              <div class="invalid-feedback">
-                Valid name is required.
-              </div>
+    <div class="container">
+        <main>
+            <form class="" action="/serviceSignUp" method="post">
+                <div class="py-5 text-center">
+                    <img class="d-block mx-auto mb-4" src="assets/images/tent.png" alt="" width="72" height="57">
+                    <h4 style="text-align:center; padding-left: 0px" class="company">PASTIME</h4>
+                    <h1 style=" padding-left: 0px;" ; " class="h3 mb-3 fw-normal "> Sign up</h1>
+                </div>
+                <div class="row g-5 ">
+                    <div class="col-md-6 col-lg-12 ">
+                        <div class="row g-3 ">
+                            <div class="col-sm-6 ">
+                                <label>Provider Name</label>
+                                <input required="required " name="spName " class="form-control " placeholder="Provider Name ">
+                                <div class="invalid-feedback ">
+                                    Valid name is required.
+                                </div>
+                            </div>
+                            <div class="col-6 ">
+                                <label for="inputEmail4 ">Email</label>
+                                <input required="required " type="email " name="spEmail " class="form-control " id="inputEmail4 " placeholder="Email ">
+                                <div class="invalid-feedback ">
+                                    Please enter a valid email address for shipping updates.
+                                </div>
+                            </div>
+
+                            <div class="col-6 ">
+                                <label>Password</label>
+                                <input required="required " type="password " name="spPassword " class="form-control " id="inputPassword4 " placeholder="Password ">
+                            </div>
+                            <br>
+                            <div class="btn1 col-6 ">
+                                <button type="submit " class="btn btn-primary ">Sign Up</button>
+                            </div>
+            </form>
             </div>
-            <div class="col-6">
-              <label for="inputEmail4">Email</label>
-           <input required="required" type="email" name="spEmail" class="form-control" id="inputEmail4" placeholder="Email">
-              <div class="invalid-feedback">
-                Please enter a valid email address for shipping updates.
-              </div>
             </div>
+        </main>
 
-            <div class="col-6">
-              <label>Password</label>
-            <input required="required" type="password" name="spPassword" class="form-control" id="inputPassword4" placeholder="Password">
-            </div>
-            <br>
-            <div class="btn1 col-6">
-             <button type="submit" class="btn btn-primary">Sign Up</button>
-            </div>
-        </form>
-      </div>
-    </div>
-  </main>
-
-  <footer class="my-5 pt-5 text-muted text-center text-small">
-    <p class="mt-5 mb-3 text-muted maru">© 2021</p>
-    <ul class="list-inline">
-      <li class="list-inline-item"><a href="#">Privacy</a></li>
-      <li class="list-inline-item"><a href="#">Terms</a></li>
-      <li class="list-inline-item"><a href="#">Support</a></li>
-    </ul>
-  </footer>
-</div>
+        <footer class="my-5 pt-5 text-muted text-center text-small ">
+            <p class="mt-5 mb-3 text-muted maru ">© 2021</p>
+            <ul class="list-inline ">
+                <li class="list-inline-item "><a href="# ">Privacy</a></li>
+                <li class="list-inline-item "><a href="# ">Terms</a></li>
+                <li class="list-inline-item "><a href="# ">Support</a></li>
+            </ul>
+        </footer>
+        </div>
 
 
-    <script src="/docs/5.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+        <script src="/docs/5.0/dist/js/bootstrap.bundle.min.js " integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf " crossorigin="anonymous "></script>
 
-      <script src="form-validation.js"></script>
-  </body>
+        <script src="form-validation.js "></script>
+</body>
 
 
 
