--- a/views/servicesignup.ejs
+++ b/views/servicesignup.ejs
@@ -29,7 +29,8 @@
                 <div class="py-5 text-center">
                     <img class="d-block mx-auto mb-4" src="assets/images/tent.png" alt="" width="72" height="57">
                     <h4 style="text-align:center; padding-left: 0px" class="company">PASTIME</h4>
-                    <h1 style=" padding-left: 0px;" ; " class="h3 mb-3 fw-normal "> Sign up</h1>
+                    <h1 style=" padding-left: 0px;" ; class="h3 mb-3 fw-normal "> Sign up</h1>
+                    <h4 class="h3 fw-normal" style="color: <%= inputcolor %>"> <%= FirstLine %><br /> <%= SecondLine%> </h4>
                 </div>
                 <div class="row g-5 ">
                     <div class="col-md-6 col-lg-12 ">
