Hash+Salt Continued
- Hash+Salt for service provider log in
- removed spaces in some ejs files

--- a/views/editActivityTemplate.ejs
+++ b/views/editActivityTemplate.ejs
@@ -29,7 +29,7 @@
     <div class="py-5 text-center">
       <!-- <img class="d-block mx-auto mb-4" src="assets/images/tent.png" alt="" width="72" height="57"> -->
       <h1 style="text-align:center;"class="company">PASTIME</h4>
-      <h4 style="text-align:center;"class="h3 mb-3 fw-normal"> Edit User</h1>
+      <h4 style="text-align:center;"class="h3 mb-3 fw-normal">Edit Activity</h1>
     </div>
     <div class="row g-5">
       <div class="col-md-6 col-lg-12">
